# pico-ds4-bridge

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  comm.c  pico_bluetooth.c  pico_sdk_import.cmake  sdkconfig.h  usb_descriptors.c
.github/workflows/: build.yml
config/: sdkconfig.h  tusb_config.h
examples/monitor/: CMakeLists.txt  monitor.c
lib2/bluepad32/src/components/bluepad32/include/: comm.h  dualshock4.h  usb_descriptors.h
src/: CMakeLists.txt  btstack_config.h  comm.c  comm.h  debug.h  dualshock4.c  dualshock4.h  dualshock4_comm.c  dualshock4_comm.h  dualshock4_shared_data.c  dualshock4_shared_data.h  main.c  pico_bluetooth.c  pico_bluetooth.h  seqlock.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/config/: sdkconfig.h  tusb_config.h
tools/: ds4.py  ds4_evdev.py  ds4_gyro.py  plot_gyro.py
